# NaPaM

./: LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
.napari-hub/: DESCRIPTION.md
src/: imgtools.py
src/NaPaM/: napari.yaml
src/NaPaM/_tests/: test_widget.py
src/napam/: __init__.py  _widget.py  napari.yaml
src/napam/_tests/: test_reader.py  test_widget.py  test_writer.py
src/napami/: __init__.py
src/napari_macro/: _widget.py  napari.yaml
src/napari_macro/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
